gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20626.d
version https://git-lfs.github.com/spec/v1
oid sha256:6f139c147fbda77ce712ad56fc7eb98e4705831674559c8b610612335f5965b0
size 350
